<resources>
    <string name="app_name">My Alarrm</string>
    <string name="screensaver">Scrrensaver</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="send_feedback">Send feedback</string>
    <string name="help">Help</string>
    <string name="clock">Clock</string>
    <string name="alarm">Alarm</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="bedtime">Bedtime</string>
    <string name="timer">Timer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bedtimefragment">BedtimeFragment</string>
    <string name="stopwatchfragment">stopwatchFragment</string>
    <string name="pause_alarm">Pause Alarm</string>
    <string name="todo">TODO</string>
    <string name="vibrate">Vibrate</string>
    <string name="google_assistant">Google Assistant</string>
    <string name="delete">Delete</string>
    <string name="_4_35_am">4:35 am</string>
    <string name="not_sheduled">not Sheduled</string>
    <string name="schedule_alarm">Schedule Alarm</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_title">Alarm Title</string>
    <string name="recurring_alarm">Recurring Alarm</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
</resources>