<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/alarmFragment"
        android:title="@string/alarm"
        android:icon="@drawable/ic_baseline_alarm_24"

        />

    <item
        android:id="@+id/clockFragment"
        android:title="@string/clock"
        android:icon="@drawable/clock"

        />

    <item
        android:id="@+id/timerFragment"
        android:title="@string/timer"
        android:icon="@drawable/timer"

        />

    <item
        android:id="@+id/stopwatchFragment"
        android:title="@string/stopwatch"
        android:icon="@drawable/stopwatch"
        />

    <item
        android:id="@+id/bedtimeFragment"
        android:title="@string/bedtime"
        android:icon="@drawable/sleep"
        />

</menu>